--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.2",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
